docs/examples/windowsdns/demo/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8gb.io/strategy: failover
    k8gb.io/primary-geotag: francecentral
    kubernetes.io/ingress.class: nginx
  labels:
    app: podinfo
  name: podinfo-ingress
  namespace: podinfo
spec:
  rules:
  - host: podinfo.global.k8gb.local
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - podinfo.global.k8gb.local
